1998-12-18  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (mips_elf_final_processing): 
	Correct setting of ABI in e_flags.

Wed Dec 16 16:17:22 1998  Dave Brolley  <brolley@cygnus.com>

	* config/tc-fr30.c (md_assemble): Warn about invalid instructions in delay slots.

start-sanitize-vr4xxx
1998-12-16  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (md_begin,md_parse_option): Handle vr4111.
	
end-sanitize-vr4xxx
1998-12-15  Doug Evans  <devans@casey.cygnus.com>

	* cgen.c (gas_cgen_md_apply_fix3): Mark as an error, rather than a
	warning, values that don't fit in the field.

1998-12-15  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (mips_abi_string): New.
	(md_parse_option,md_longopts): Add mabi.
	(mips_elf_final_processing): Set e_flags based on mabi flag.

start-sanitize-vr4xxx
1998-12-15  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (md_parse_option): Handle vr4111. 

1998-12-13  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (mips_4121): New.
	(md_begin,mips_ip,md_longopts,md_parse_option): Add vr4121.

end-sanitize-vr4xxx
98-12-11  Ken Raeburn  <raeburn@cygnus.com>

	* config/tc-h8300.c (build_bytes): Change message given if the
	instruction requires H8/300H mode and we're not in Hmode, to
	suggest that it may be the operand modes that are the problem, not
	necessarily the opcode.

start-sanitize-fr30
1998-12-10  Nick Clifton  <nickc@cygnus.com>

	* config/tc-fr30.c: Add line separator character.

end-sanitize-fr30
start-sanitize-sky
Wed Dec  9 17:06:48 1998  Doug Evans  <devans@canuck.cygnus.com>

	Thu Nov 19 16:57:01 EST 1998  Frank Ch. Eigler <fche@cygnus.com>

	* config/tc-mips.c (append_insn): Don't move INSN_SYNC
	instructions into delay slot.

	Tue Oct 13 14:06:18 1998  Doug Evans  <devans@canuck.cygnus.com>

	* config/tc-dvp.h (md_end): Define.
	* config/tc-dvp.c (dvp_end): New function.

end-sanitize-sky
start-sanitize-r5900
Wed Dec  9 12:29:23 1998  Jeffrey A Law  (law@cygnus.com)
